--- a/.env
+++ b/.env
@@ -3,6 +3,15 @@ ATLAS_URI = mongodb+srv://john:john123@cluster0.hf3u6g5.mongodb.net/globalcart
 # BASE_URL = http://localhost:8080
 # FRONTEND_URL= http://localhost:3000
 NODE_ENV = production
+JWT_SECRET = B4B6767DC6EE5
+JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME = 7
+SMTP_HOST= sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=173a8818340a5f
+SMTP_PASS=4141a836181195
+SMTP_FROM_NAME=GlobalCart
+SMTP_FROM_EMAIL=noreply@globalcart.com
 
 
 
